[package]
name = "solana-coverage"
version = "0.1.0"
authors = ["Boris Astardzhiev <boris.astardzhiev@gmail.com>"]
description = "A tool for computing test coverage of a Solana program"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
addr2line = "0.25"
anyhow = "1.0"
byteorder = "1.5"
cargo_metadata = "0.21"
# BPF_ consts
solana-sbpf = "0.10.0"
sha2 = "0.10.9"
hex = "0.4.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
]
