[package]
name = "solana-coverage"
version = "1.0.0"
authors = ["Boris Astardzhiev <boris.astardzhiev@gmail.com>", "Samuel Moelius <sam@moeli.us>"]
description = "A tool for computing test coverage of a Solana program"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
addr2line = "0.25"
anyhow = "1.0"
byteorder = "1.5"
# BPF_ consts
solana-sbpf = "0"
sha2 = "0.10"
hex = "0.4"
